--- a/main.css
+++ b/main.css
@@ -14,5 +14,6 @@
     background-image: url(./images/image.png);
     background-repeat: no-repeat;
     background-size: cover;
+    background-position: center;
 }
 
